<resources>
    <string name="app_name">Smart Vase</string>
    <string name="your_plants">Your plants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_data">Not Signed In</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="dont_have_account">Don\'t Have An Account?</string>
    <string name="already_have_account">Already Have An Account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>

    <string name="client_id">250378430176–56g4ace2f2h7kspr1p1luukojhts5ifp.apps.googleusercontent.com</string>
    <string name="add">add</string>
    <string name="remove">remove</string>
    <string name="profile">profile</string>
    <string name="background">background</string>
    <string name="auto">Auto</string>
    <string name="ficus">Ficus</string>
    <string name="planticon">plantIcon</string>
    <string name="plantcard">plantCard</string>
    <string name="permission_required">Camera access is required to display the camera preview.</string>
    <string name="ok">OK</string>
    <string name="permission_granted">Permission is granted. You can use the camera now.</string>
</resources>