<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/backgroundImage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/sfondo" />

    <TextView
        android:id="@+id/smartVaseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#00915C"
        app:layout_constraintStart_toStartOf="@+id/guideline_left2"
        app:layout_constraintTop_toTopOf="@+id/guideline_top3" />

    <!--<ImageButton
        android:id="@+id/profileButton2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/profile"
        android:scaleType="centerInside"
        android:src="@drawable/utente"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"
        app:layout_constraintTop_toTopOf="@+id/guideline_top3"
        tools:ignore="ImageContrastCheck" />-->

    <TextView
        android:id="@+id/yourPlantText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/your_plants"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"
        app:layout_constraintStart_toStartOf="@+id/guideline_left2"
        app:layout_constraintTop_toBottomOf="@+id/smartVaseText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPlantButton2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:contentDescription="@string/add"
        android:elevation="2dp"
        android:focusable="true"
        android:foreground="@drawable/add"
        android:foregroundTint="#EFEFEF"
        app:backgroundTint="#00C081"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"
        app:layout_constraintStart_toStartOf="@+id/guideline_left2"
        app:rippleColor="#EFEFEF"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/removePlantButton2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:contentDescription="@string/remove"
        android:elevation="2dp"
        android:focusable="true"
        android:foreground="@drawable/trashicon"
        android:foregroundTint="#EFEFEF"
        android:visibility="invisible"
        app:backgroundTint="#00C081"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"
        app:layout_constraintStart_toStartOf="@+id/guideline_left2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPlant2"
        android:layout_width="320dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:visibility="visible"
        app:cardBackgroundColor="#00C081"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/guideline_left2"
        app:layout_constraintTop_toBottomOf="@+id/yourPlantText2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp">

            <ImageView
                android:id="@+id/cardWaterLevel2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/plantcard"
                android:src="@drawable/livelloh2ohigh"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="ImageContrastCheck" />

            <!-- &lt;!&ndash; Card vuota per immagine pianta &ndash;&gt; -->
            <androidx.cardview.widget.CardView
                android:id="@+id/iconaPianta2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                app:cardBackgroundColor="#EFEFEF"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <!--             &lt;!&ndash; Immagine pianta&ndash;&gt; -->
                    <ImageView
                        android:id="@+id/PlantIcon2"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:contentDescription="@string/planticon"
                        android:outlineProvider="paddedBounds"
                        android:src="@drawable/planticon1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/planticon1" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/PlantName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/ficus"
                android:textAlignment="center"
                android:textColor="#EFEFEF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconaPianta2"
                tools:ignore="TextContrastCheck"
                tools:layout_editor_absoluteY="0dp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/autoSwitch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:minHeight="48dp"
                android:text="@string/auto"
                android:textAlignment="viewEnd"
                android:textColor="#00512E"
                android:verticalScrollbarPosition="right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTouchable"
        android:layout_width="320dp"
        android:layout_height="120dp"
        android:visibility="invisible"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardPlant2"
        app:layout_constraintEnd_toEndOf="@+id/cardPlant2"
        app:layout_constraintStart_toStartOf="@+id/cardPlant2"
        app:layout_constraintTop_toTopOf="@+id/cardPlant2"></androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>